# agv_local_planner

./: .gitignore  CMakeLists.txt  README.md  nurbs_local_planner_plugin.xml  package.xml
include/agv_local_planner/: nurbs_planner.h  nurbs_planner_ros.h  physical_constraints.h
src/: nurbs_planner.cpp  nurbs_planner_ros.cpp
