<?xml version="1.0"?>
<package format="2">
  <name>agv_local_planner</name>
  <version>0.1.1</version>
  <description>The agv_local_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="q576333@gmail.com">bozhi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>mbf_utility</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>agv_path_smoothing</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>mbf_utility</exec_depend>
  <exec_depend>mbf_costmap_core</exec_depend>
  <exec_depend>agv_path_smoothing</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <mbf_costmap_core plugin="${prefix}/nurbs_local_planner_plugin.xml" />
  </export>

</package>
